# mswe262p-exercises

./: .gitignore  Cargo.toml  README.md  download-files.sh
week1/: main.rs
week2/: ex4.1.rs  five.rs  four.rs  six.rs
week3/: 12-1.rs  13.js  14.rs  16.rs
week4/: 10-1.rs  9-1.js
week5/: Eleven.java  Framework.java  Makefile  manifest.mf
week5/app1/: App.java
week5/app2/: App.java
week6/: 26-1.rs  28.rs
week7/: 21.rs  22.rs  25.rs
week8/: 29-1.rs  30-1.rs  32-1.rs
week9/: week9.py
