[package]
name = "SWE262P-Exercises"
version = "0.0.1"
edition = "2018"

[[bin]]
path = "./week1/main.rs"
name = "week1"

[[bin]]
path = "./week2/four.rs"
name = "week2-1"

[[bin]]
path = "./week2/five.rs"
name = "week2-2"

[[bin]]
path = "./week2/six.rs"
name = "week2-3"

[[bin]]
path = "./week3/12-1.rs"
name = "12-1"

[[bin]]
path = "./week3/16.rs"
name = "16"
