[package]
name = "SWE262P-Exercises"
version = "0.0.1"
edition = "2018"

[dependencies]
rusqlite = { version = "0.24.2", optional = true }

[features]
sqlite = [ "rusqlite" ]

[[bin]]
path = "./week1/main.rs"
name = "week1"

[[bin]]
path = "./week2/four.rs"
name = "week2-1"

[[bin]]
path = "./week2/five.rs"
name = "week2-2"

[[bin]]
path = "./week2/six.rs"
name = "week2-3"

[[bin]]
path = "./week3/12-1.rs"
name = "12-1"

[[bin]]
path = "./week3/16.rs"
name = "16"

[[bin]]
path = "./week4/10-1.rs"
name = "10-1"

[[bin]]
path = "./week6/26-1.rs"
name = "26-1"
required-features = [ "sqlite" ]

[[bin]]
path = "./week6/28.rs"
name = "28"
